<resources>
    <string name="app_name">Cliente</string>
    <string name="contentDescriptionLogo">Logo Principal</string>
    <string name="recordarme">Recordarme</string>
    <string name="input_usuario">Ingrese usuario</string>
    <string name="input_password">Ingrese clave</string>
    <string name="input_button">Entrar</string>
    <string name="datos_viaje">¿A dónde se dirige?</string>
    <string name="origen">Origen</string>
    <string name="destino">Destino</string>
    <string name="confirmar_viaje">Solicitar</string>
    <string name="cancelar_viaje">Cancelar</string>
    <string name="title_activity_asignar_servicio">AsignarServicioActivity</string>
    <string name="punto_partida">Ingrese punto de partida</string>
    <string name="punto_destino">Ingrese punto de destino</string>
    <string name="descripcionImagenMenu">imagen de menu</string>
    <string name="descripcionImagenAtras">imagen atras</string>
    <string name="api_key">AIzaSyDzk5KMW7MRXU2HUqXUSyCgGlCwib1nTu8</string>
    <string name="solicitar">Solicitar</string>
    <string name="confirmar">Confirmar</string>
    <string name="solicitando_viaje">Solicitando Viaje</string>
    <string name="boton_cancelar">Cancelar</string>
    <string name="error_internet">No se pudo acceder a la red</string>
    <string name="sharedPreferenceFile">conf_user</string>
    <string name="sharedPreferenceKeyUser">idUser</string>
    <string name="sel_mapa">Selecciona en el mapa</string>
    <string name="titulo_barra">GoTransfer</string>
    <string name="diario">Diario</string>
    <string name="historico">Historico</string>
    <string name="viajes">Tus Viajes</string>
    <string name="title_activity_servicio_diario">ServicioDiarioActivity</string>
    <string name="title_activity_servicio_historico">ServicioHistoricoActivity</string>
</resources>
